force-app/main/default/objects/Risk__c/Risk__c.object-meta.xml
<CustomObject>
    <description>Project Risks</description>
    <label>Risk</label>
    <nameField>
        <displayFormat>R-{000}</displayFormat>
        <label>Risk ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>