force-app/main/default/objects/Risk__c/fields/Risk_Detail__c.field-meta.xml
<CustomField>
    <fullName>Risk_Detail__c</fullName>
    <label>Risk Detail</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>