force-app/main/default/objects/Risk__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Open</fullName>
            </value>
            <value>
                <fullName>2 - Pending</fullName>
            </value>
            <value>
                <fullName>3 - Closed</fullName>
            </value>
            <value>
                <fullName>4 - Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>