force-app/main/default/objects/Risk__c/fields/Steering_Committee_Report__c.field-meta.xml
<CustomField>
    <fullName>Steering_Committee_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Steering Committee Report</label>
    <type>Checkbox</type>
</CustomField>